--- a/data/theme/gnome-shell-sass/_drawing.scss
+++ b/data/theme/gnome-shell-sass/_drawing.scss
@@ -40,7 +40,6 @@
   @if $t==normal {
     background-color: $base_color;
     border-color: $borders_color;
-
   }
   @if $t==focus {
     border-color: if($fc==$selected_bg_color,
@@ -56,72 +55,14 @@
   }
 }
 
-// buttons
-
-@function draw_border_color ($c) {
-  //
-  // colored buttons want the border form the base color
-  //
-  @return if($variant == 'light', darken($c, 18%), darken($c, 4%));
-}
-
-@function draw_text_shadow_color ($tc:$fg_color, $bg:$bg_color) {
+// On-screen Keyboard
+@mixin keyboard_key($t, $c:$osd_bg_color, $tc:$osd_fg_color) {
 //
-// calculate the color of text shadows
+// Keyboard key drawing function
 //
-// $tc is the text color
-// $bg is the background color
-//
-  $lbg: lightness($bg)/100%;
-  @if lightness($tc)<50% { @return rgba(255,255,255,$lbg/($lbg*1.3)); }
-  @else { @return rgba(0,0,0,1-$lbg*0.8); }
-}
-
-@function draw_button_hilight_color($c) {
-//
-// calculate the right top highlight color for buttons
-//
-// $c: base color;
-//
-  @if lightness($c)>90% { @return white; }
-  @else if lightness($c)>80% { @return rgba(255,255,255, 0.7); }
-  @else if lightness($c)>50% { @return rgba(255,255,255, 0.5); }
-  @else if lightness($c)>40% { @return rgba(255,255,255, 0.3); }
-  @else { @return rgba(255,255,255, 0.1); }
-}
-
-@mixin draw_button_text_shadow ($tc:$fg_color, $bg:$bg_color) {
-//
-// helper function for the text emboss effect
-//
-// $tc is the optional text color, not the shadow color
-//
-// TODO: this functions needs a way to deal with special cases
-//
-
-  $shadow: draw_text_shadow_color($tc, $bg);
-
-  @if lightness($tc)<50% {
-    text-shadow: 0 1px $shadow;
-    icon-shadow: 0 1px $shadow;
-  }
-  @else {
-    text-shadow: 0 -1px $shadow;
-    icon-shadow: 0 -1px $shadow;
-  }
-}
-
-@mixin button($t, $c:$bg_color, $tc:$fg_color, $edge: $borders_edge, $shadow: $shadow_color) {
-//
-// Button drawing function
-//
-// $t:    button type,
-// $c:    base button color for colored* types
+// $t:    key type,
+// $c:    base key color for colored* types
 // $tc:   optional text color for colored* types
-// $edge: set to none to not draw the bottom edge or specify a color to not
-//        use the default one
-// $shadow: set to none to not draw the drop shadow or specify a color to not
-//          use the default one
 //
 // possible $t values:
 // normal, hover, active, insensitive, insensitive-active,
@@ -129,81 +70,167 @@
 // osd, osd-hover, osd-active, osd-insensitive, osd-backdrop, undecorated
 //
 
-  $hilight_color: draw_button_hilight_color($c);
-  $button_edge: if($edge == none, none, draw_widget_edge($edge));
-  $blank_edge: if($edge == none, none, draw_widget_edge(transparentize($edge,1)));
-  $button_shadow: if($shadow == none, none, 0 1px 1px 0 $shadow);
+  // normal key
+  @if $t==normal {
+    color: $tc;
+    background-color: lighten($c, 3%);
+  }
+
+  // focused key
+  @if $t==focus {
+    color: $tc;
+    background-color: mix(lighten($c, 3%), $selected_bg_color, 90%);
+    box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.4);
+    &:hover {
+      background-color: mix(lighten($c, 8%), $selected_bg_color, 90%);
+      box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3);
+    }
+  }
+
+  // hover key
+  @else if $t==hover {
+    color: $tc;
+    background-color: lighten($c, if($variant == 'light', 8%, 5%));
+  }
+
+  // active key
+  @else if $t==active {
+    color: $tc;
+    background-color: darken($c,3%);
+  }
+
+  // insensitive key
+  @else if $t==insensitive {
+    color: $insensitive_fg_color;
+    background-color: $insensitive_bg_color;
+  }
+
+  // reset
+  @else if $t==undecorated {
+    background-color: transparent;
+    background-image: none;
+  }
+}
+
+
+// buttons
+// since buttons are all flat an borderless now the mixin is simpler
+
+@mixin button($t, $tc:$fg_color, $c:$bg_color) {
+//
+// Button drawing function
+//
+// $t:    button type,
+// $c:    base button colors, derived from fg_color
+// $tc:    base button colors, derived from fg_color
+//
+// possible $t values:
+// normal, hover, active, insensitive, insensitive-active,
+// backdrop, backdrop-active, backdrop-insensitive, backdrop-insensitive-active,
+// osd, osd-hover, osd-active, osd-insensitive, osd-backdrop, undecorated
+//
 
   // normal button
   @if $t==normal {
     color: $tc;
-    background-color: lighten($c, 3%);
-    border-color: lighten($c, 3%);
-    @include draw_shadows($button_shadow);
-    // box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
-    text-shadow: none;
-    icon-shadow: none;
+    background-color: mix($tc, $c, 5%);
   }
 
   // focused button
   @if $t==focus {
     color: $tc;
-    background-color: mix(lighten($c, 3%), $selected_bg_color, 90%);
-    // border-color: lighten($c, 3%);
+    background-color: mix(mix($tc, $c, 5%), $selected_bg_color, 90%);
+    // border-color: lighten($tc, 3%);
     box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.4);
-    text-shadow: none;
-    icon-shadow: none;
+    &:hover {
+      background-color: mix(mix($tc, $c, 7%), $selected_bg_color, 90%);
+      box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.3);
+    }
   }
 
   // hover button
   @else if $t==hover {
     color: $tc;
-    background-color: lighten($c, if($variant == 'light', 8%, 5%));
-    border-color: lighten($c, if($variant == 'light', 8%, 5%));
-    @include draw_shadows($button_shadow);
-    text-shadow: none;
-    icon-shadow: none;
+    background-color: mix($tc, $c, 7%);
   }
 
   // active button
   @else if $t==active {
     color: $tc;
-    background-color: darken($c,3%);
-    border-color: darken($c,3%);
-    text-shadow: none;
-    icon-shadow: none;
-    box-shadow: none;
+    background-color: mix($tc, $c, 2%);
   }
 
   // insensitive button
   @else if $t==insensitive {
-    color: $insensitive_fg_color;
-    border-color: $insensitive_bg_color;
-    background-color: $insensitive_bg_color;
-    box-shadow: none;
-    text-shadow: none;
-    icon-shadow: none;
+    color: transparentize($tc, 0.5);
+    background-color: transparentize($tc, .95);
   }
 
+  // default/suggested button
+  @else if $t==default {
+    background-color: $selected_bg_color;
+    color: $selected_fg_color;
+    &:focus {
+      box-shadow: inset 0 0 0 2px transparentize($selected_bg_color, 0.4);
+    }
+    &:hover, &:focus { 
+      background-color: lighten($selected_bg_color, 5%);
+      color: lighten($selected_fg_color, 5%);
+    }
+    &:active {
+      background-color: darken($selected_bg_color, 7%);
+      color: darken($selected_fg_color, 7%);
+    }
+    &:insensitive {
+      @include button(insensitive);
+      background-color: transparentize($selected_bg_color, .5);
+      color: transparentize($selected_fg_color, .5);
+    }
+  }
   // reset
   @else if $t==undecorated {
-    border-color: transparent;
     background-color: transparent;
-    background-image: none;
-    @include draw_shadows(inset 0 1px rgba(255,255,255,0),$blank_edge);
-    text-shadow: none;
-    icon-shadow: none;
+    background-color: none;
   }
 }
 
+// tile
+@mixin tile($color) {
+  @extend %tile;
+  background-color: transparent;
+
+  &:hover,
+  &:selected:hover {
+    background-color: transparentize($color, .85);
+  }
+
+  &:focus:hover {
+    background-color: transparentize($color, .8);
+  }
+
+  &:selected,
+  &:focus {
+    background-color: transparentize($color, .9);
+  }
+
+  &:outlined,
+  &:checked,
+  &:active {
+    background-color: transparentize(darken($osd_bg_color, 10%), .5);
+  }
+}
+
+
 // overview icons
+// mixin fo tiles in the overview
 @mixin overview_icon($color) {
   .overview-icon {
-    @extend %icon_tile;
+    @extend %tile;
     color: $color;
   }
 
   &:hover,
+  &:focus:hover,
   &:selected {
     .overview-icon {
       background-color: transparentize($color, .9);
@@ -212,23 +239,50 @@
 
   &:focus {
     .overview-icon {
-      background-color: transparentize($color, .7);
+      background-color: transparentize($color, .95);
       // border-color: $selected_bg_color;
     }
   }
 
   &:drop {
     .overview-icon {
-      border: 2px solid $selected_bg_color; //already 2px transparent so no jumping
+      border: 2px solid transparentize($selected_bg_color, .2); //already 2px transparent so no jumping
       background-color: transparentize($selected_bg_color, .8);
     }
   }
 
-  &:focus,
   &:active,
+  &:focus:active,
   &:checked {
     .overview-icon {
       background-color: transparentize(darken($osd_bg_color, 10%), .5);
     }
+  }
+}
+
+
+// styling for elements within popovers that look like notifications
+@mixin card($flat: false) {
+  border-radius: $base_border_radius;
+  margin: $base_margin;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+
+  @if $flat {
+    @include button(undecorated);
+    box-shadow: none !important;
+  } @else {
+    @include button(normal);
+  }
+
+  &:focus {
+    @include button(focus);
+  }
+
+  &:hover {
+    @include button(hover);
+  }
+
+  &:active {
+    @include button(active);
   }
 }
