--- a/data/theme/gnome-shell-sass/widgets/_popovers.scss
+++ b/data/theme/gnome-shell-sass/widgets/_popovers.scss
@@ -2,12 +2,14 @@
 
 // the popover itself
 .popup-menu-boxpointer {
+  // override popover styles for panel menus so
+  // we can draw a box shadow and no arrow
   -arrow-border-radius: $modal_radius;
-  -arrow-background-color: $bg_color;
-  -arrow-border-color: $borders_color;
-  -arrow-border-width: 1px;
-  -arrow-base: 24px;
-  -arrow-rise: 12px; 
+  -arrow-background-color: transparent;
+  -arrow-border-color: transparent;
+  -arrow-border-width: 0;
+  -arrow-base: 0;
+  -arrow-rise: $base_margin; // use this as top margin
   -arrow-box-shadow: none; // dreaming bugzilla #689995
   margin: $base_margin; // used as distance from the screen edge
 }
@@ -20,25 +22,10 @@
   //.popup-status-menu-item { font-weight: normal;  color: pink; } //dunno what that is
   &.panel-menu {
     -boxpointer-gap: $base_margin+2px; // distance from the panel
-    
-    // override popover styles for panel menus so
-    // we can draw a box shadow and no arrow
-    -arrow-border-radius: $modal_radius;
-    -arrow-background-color: transparent;
-    -arrow-border-color: transparent;
-    -arrow-border-width: 0;
-    -arrow-base: 0;
-    -arrow-rise: $base_margin; // use this as top margin
-    -arrow-box-shadow: none; // dreaming bugzilla #689995
-    
     margin-bottom: 1.75em; // so it doesn't touch the bottom of the screen
 
     // style the menu content instead
     .popup-menu-content {
-      border-radius: $modal_radius;
-      border: 1px solid $borders_color; 
-      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
-      background-color: $bg_color;
       padding: $base_padding*1.5;
     }
 
@@ -49,6 +36,10 @@
 // popover content;
 .popup-menu-content {
   padding: $base_padding;
+  border-radius: $modal_radius;
+  border: 1px solid $borders_edge; 
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+  background-color: $bg_color;
 }
 
 // menu items
@@ -59,8 +50,8 @@
   border-radius: $base_border_radius;
   transition: 0.2s all ease;
 
-  &:ltr { padding-right:1.75em; padding-left: 0; }
-  &:rtl { padding-right: 0; padding-left:1.75em; }
+  &:ltr { padding-right:$base_padding; padding-left: 0; }
+  &:rtl { padding-right: 0; padding-left:$base_padding; }
 
   &:hover {
     background-color: $hover_bg_color;
@@ -68,14 +59,12 @@
 
   &:checked {
     background-color: $hover_bg_color;
-    font-weight: bold;
-
     margin-bottom: 0;
     box-shadow: inset 0 -1px 0 0 darken($hover_bg_color, 5%);
     border-radius: $base_border_radius $base_border_radius 0 0;
     
     &:hover {
-      background-color: darken($hover_bg_color, 4%);
+      background-color: lighten($hover_bg_color, 5%);
     }
   }
 
@@ -85,8 +74,8 @@
   }
 
   &:active { 
-    background-color: $active_bg_color;
-    color: $active_fg_color;
+    background-color: lighten($active_bg_color,3%);
+    color: lighten($active_fg_color,3%);
   }
 
   &:insensitive { color: transparentize($fg_color,0.5);}
@@ -106,8 +95,6 @@
 // symbolic icons in popover
 .popup-menu-arrow,
 .popup-menu-icon { 
-  margin: 0;
-  padding:0;
   icon-size: 16px !important;
 }
 
@@ -117,32 +104,27 @@
 
 // popover submenus
 .popup-sub-menu {
-  background-color: $hover_bg_color;
   border:none;
+  background-color: $hover_bg_color;
   border-radius: 0 0 $base_border_radius $base_border_radius;
-  padding: 0;
-  margin-top: 0;
-  &:active {
-    background-color: transparent;
-  }
-  
+
   .popup-menu-ornament {
     min-width: 14px !important;
   }
 
   .popup-menu-item {
-    margin: 0;
     border-radius: 0;
+    margin: 0;
     padding: $base_padding*1.5 $base_padding*2;
 
-    &:last-child:hover{
+    &:last-child {
       border-radius: 0 0 $base_border_radius $base_border_radius;
     }
   }
 
   .popup-menu-section {
     .popup-menu-item:last-child:hover { border-radius: 0 }
-    &:last-child .popup-menu-item:last-child:hover {
+    &:last-child .popup-menu-item:last-child {
       border-radius: 0 0 $base_border_radius $base_border_radius;
     }
   }
@@ -160,16 +142,11 @@
 
 // separator
 .popup-separator-menu-item {
-  padding: 0;
-
-  &:ltr { padding-right:$base_padding; padding-left: 0; }
-  &:rtl { padding-right: 0; padding-left:$base_padding; }
-
+  padding:0;
+  margin: 4px 0;
 
   .popup-separator-menu-item-separator {
     height: 1px; //not really the whole box
-    margin: 0 !important;
-    padding: 0 !important;
     background-color: $borders_color;
   }
 
@@ -199,7 +176,7 @@
   min-width: 22em;
 
   // this is unneeded in at the top-level this menu, hide it
-  .popup-menu-ornament {width:0;padding:0;spacing:0;margin:0;}
+  .popup-menu-ornament {width:0;padding:0;margin:0;}
 
   .popup-menu-item {
     &:ltr { padding-left:$base_padding;padding-right:$base_padding*2; }
@@ -213,8 +190,8 @@
     -st-icon-style: symbolic;
   }
 
+  // account for icons in submenus with padding
   .popup-sub-menu .popup-menu-item > :first-child {
-    // account for icons in submenus with padding
     &:ltr {
       padding-left: 0;
       margin-left: $base_icon_size;
