--- a/data/theme/gnome-shell-sass/widgets/_switcher-popup.scss
+++ b/data/theme/gnome-shell-sass/widgets/_switcher-popup.scss
@@ -25,27 +25,7 @@ $switcher_border_radius: $modal_radius + 8px;
 
   // each item in the list
   .item-box {
-    @extend %icon_tile;
-
-    &:outlined {
-      background-color: transparentize($osd_fg_color, 0.7);
-    }
-
-    &:hover,
-    &:selected {
-      background-color: transparentize($osd_fg_color, .9);
-    }
-
-    &:focus {
-      background-color: transparentize($osd_fg_color, .7);
-      // border-color: $selected_bg_color;
-    }
-
-    &:focus,
-    &:active,
-    &:checked {
-      background-color: transparentize(darken($osd_bg_color, 10%), .5);
-    }
+    @include tile($osd_fg_color);
   }
 
   .separator {
